[package]
name = "knf-rs"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "fbank features extractor without external dependencies"

[dependencies]
knf-rs-sys = { path = "sys", version = "0.1.7", features = [] }
eyre = "0.6.12"
ndarray = "0.15.6"

[features]
default = ["msvc-static"]
msvc-static = ["knf-rs-sys/msvc-static"]
